apps/apps/openfga/incus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incus
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    traefik.ingress.kubernetes.io/service.serverScheme: https
    traefik.ingress.kubernetes.io/service.middlewares: large-body-limit
  namespace: openfga
spec:
  rules:
  - host: incus.moonpiedumpl.ing
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: incus-https
            port:
              number: 8443
  tls:
  - hosts: 
    - "incus.moonpiedumpl.ing"
    secretName: incus-tls
---
apiVersion: v1
kind: Service
metadata:
  name: incus-https
  namespace: openfga
spec:
  ports:
    - protocol: TCP
      name: https
      port: 8443
      targetPort: 8443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: incus-https
  namespace: openfga
  labels:
    kubernetes.io/service-name: incus-https
addressType: IPv4
ports:
- name: https
  port: 8443
  protocol: TCP
endpoints:
- addresses:
  - "130.166.84.86"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: large-body-limit
  namespace: openfga
spec:
  buffering:
    maxRequestBodyBytes: 20000000000  # 20GB
